--- a/_config.yml
+++ b/_config.yml
@@ -285,9 +285,9 @@ collections:
   talks:
     output: true
     permalink: /:collection/:path/
-  code:
-    output: true
-    permalink: /:collection/:path/
+  #code:
+  #  output: true
+  #  permalink: /:collection/:path/
   travel:
     output: true
     permalink: /:collection/:path/
