--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -6,12 +6,12 @@ main:
     url: /publications/
   - title: "Talks"
     url: /talks/
-  - title: "Travel"
+  - title: "Observing and Travel"
     url: /travel/
   - title: "Teaching"
     url: /teaching/
-  - title: "Code"
-    url: /code/
+  #- title: "Code"
+  #  url: /code/
   - title: "CV"
     url: /cv/
   - title: "Contact"
