--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ minimal_mistakes_skin    : "contrast" # "default", "air", "aqua", "contrast", "d
 
 # Site Settings
 locale                   : "en-US"
-title                    : #"Zachary Hartman"
+title                    : "Zachary Hartman's Webpage"
 title_separator          : "-"
 name                     : "Zachary Hartman"
 description              : "Zach's academic homepage"
