--- a/_config.yml
+++ b/_config.yml
@@ -314,8 +314,8 @@ defaults:
       path: ""
       type: publications
     values:
-      #layout: single-publication
-      layout: publication_listing
+      layout: single-publication
+      #layout: publication_listing
       author_profile: true
   # _talks
   - scope:
