--- a/_config.yml
+++ b/_config.yml
@@ -100,7 +100,7 @@ analytics:
 
 # Site Author
 author:
-  name             : "Zachary Hartman - Dr."
+  name             : "Zachary Hartman"
   avatar           : "images/profile.jpg"
   bio              : "NASA Postdoctoral Fellow at NASA Ames"
   location         : 
